# skillguard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  deny.toml  dory_srs_24_variables.srs  mcp.json  render.yaml
.github/workflows/: ci.yml  release.yml
.well-known/: mcp.json
data/: calibration.json  model.pt  model_versions.json  registry.json  training_summary.json
demo/: agent_demo.mjs  package-lock.json  package.json  wallets.env.example
deploy/: Caddyfile  nginx-skillguard.conf  skillguard.service
examples/: skillguard-install-hook.sh
moltbook/: Dockerfile  HEARTBEAT.md  MESSAGING.md  RULES.md  SKILL.md  agent.py  package.json
src/: batch.rs  cache.rs  clawhub.rs  crawler.rs  lib.rs  main.rs  mcp.rs  model.rs  patterns.rs  prover.rs  scores.rs  server.rs  skill.rs  ui.rs
src/server/: handlers.rs  logging.rs  middleware.rs  mod.rs  types.rs
static/: ai-plugin.json  index.html  llms.txt  openapi.json
tests/: integration.rs  regression.rs
training/: calibrate.py  dataset.py  export_weights.py  fetch_and_label.py  fetch_sample.py  generate_review_queue.py  ingest_feedback.py  llm-vs-mlp-comparison.json  llm_label.py  model.py  real-labels.json  retrain.sh  review-queue.json  review_cli.py  stratified-candidates.json  stratified_sample.py  train.py  weights.rs
training/data/: calibration.json  model.pt  skills_labeled.jsonl  training_summary.json  weights.rs
