[package]
name = "skillguard"
version = "0.1.0"
edition = "2021"
description = "Standalone skill safety classifier for OpenClaw/ClawHub skills."
license = "MIT"

[lib]
name = "skillguard"
path = "src/lib.rs"

[[bin]]
name = "skillguard"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
eyre = "0.6"
regex = "1.10"

# HTTP server
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }

# Rate limiting
governor = "0.6"

# HTTP client for ClawHub API
reqwest = { version = "0.12", features = ["json"] }

# ONNX model inference
onnx-tracer = { git = "https://github.com/ICME-Lab/jolt-atlas", rev = "194ee927313f90f3827e86e885fb045742f3e971" }

[workspace.dependencies]
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }

[patch.crates-io]
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }

[profile.test]
opt-level = 3
lto = "off"

[profile.release]
lto = "fat"
